--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.docker.compose.lifecycle-management=start_only
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+# jpa-config: remove n+1 queries
+spring.jpa.open-in-view=false
