--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=url-shortener
 
+## App Config
+app.base-url=http://localhost:8080
+app.default-expiry-in-days=30
+app.validate-original-url=true
+
 spring.docker.compose.lifecycle-management=start_only
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
