--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=url-shortener
 
-## App Config
+####### App Config #######
 app.base-url=http://localhost:8080
 app.default-expiry-in-days=30
 app.validate-original-url=true
@@ -13,4 +13,12 @@ spring.datasource.password=postgres
 
 # jpa-config: remove n+1 queries
 spring.jpa.open-in-view=false
+
+# only for dev purpose
 spring.jpa.show-sql=true
+
+
+####### Security #######
+
+# only for dev purpose
+app.security-key=keep-it-secret
