--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,15 @@ app.default-expiry-in-days=30
 app.validate-original-url=true
 app.page-size=10
 
-spring.docker.compose.lifecycle-management=start_only
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 # jpa-config: remove n+1 queries
 spring.jpa.open-in-view=false
-spring.jpa.show-sql=true
+
+## display SQL queries in console (development only)
+#spring.jpa.show-sql=true
+
+## starts docker container on application startup (development only)
+spring.docker.compose.lifecycle-management=start_only
